src/objects/County_Schedule_Availability__c.object
<CustomObject>
    <fields>
        <fullName>County__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>County</label>
        <referenceTo>County__c</referenceTo>
        <relationshipLabel>Counties Schedule Availability</relationshipLabel>
        <relationshipName>Counties_Schedule_Availability</relationshipName>
        <required>true</required>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Employee__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Employee</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Counties_Schedule_Availability</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>End_Date__c</fullName>
        <label>End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Start_Date__c</fullName>
        <label>Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Type__c</fullName>
        <label>Type</label>
        <picklist>
            <picklistValues>
                <fullName>Sales Rep</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Surveyor</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <label>County Schedule Availability</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Employee__c</columns>
        <columns>County__c</columns>
        <columns>OWNER.FIRST_NAME</columns>
        <columns>OWNER.LAST_NAME</columns>
        <columns>Start_Date__c</columns>
        <columns>End_Date__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>Kevin_Kristofelt</fullName>
        <columns>NAME</columns>
        <columns>County__c</columns>
        <columns>Employee__c</columns>
        <columns>CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Employee__c</field>
            <operation>equals</operation>
            <value>Kevin Kristofeld</value>
        </filters>
        <label>Kevin Kristofeld</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <displayFormat>CSA-{0000}</displayFormat>
        <label>CSA Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Counties Schedule Availability</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>